# mechanical-suite

./: .gitignore  README.md  create_database.py  inspect_database.py  pyproject.toml  seed_database.py
database/: mechanical_suite.db
examples/: ex_fit.py  test_iso286.py
src/mechanical_suite/fits/: calculator.py  iso286.py  selector.py
src/mechanical_suite/fits/models/: fit.py  fit_result.py  tolerance.py
src/mechanical_suite/units/: length.py  mass.py  quantity.py
tests/: test_fit.py  test_fit_calculator.py  test_fit_result.py  test_length.py  test_mass.py  test_selector.py  test_tolerance.py
